add text selection background color to all pages

--- a/css/article-1.css
+++ b/css/article-1.css
@@ -29,6 +29,7 @@
     --code-punctuation: #ffffff;
     --code-string: #e6db74;
     --code-keyword: #f92672;
+    --text-selection-color: #878b9180;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -64,6 +65,7 @@
     --code-punctuation: #d4d4d4;
     --code-string: #ce9178;
     --code-keyword: #569cd6;
+    --text-selection-color: #264f78;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -98,6 +100,7 @@
     --code-punctuation: #000000;
     --code-string: #a31515;
     --code-keyword: #0000ff;
+    --text-selection-color: #add6ff;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -132,6 +135,7 @@
     --code-punctuation: #e1e4e8;
     --code-string: #9ecbff;
     --code-keyword: #f97583;
+    --text-selection-color: #3392ff44;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -167,6 +171,7 @@
     --code-punctuation: var(--body-text);
     --code-string: #032f62;
     --code-keyword: #d73a49;
+    --text-selection-color: #0366d625;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -202,6 +207,7 @@
     --code-punctuation: #333333;
     --code-string: #2aa198;
     --code-keyword: #268bd2;
+    --text-selection-color: #eee8d5;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -220,6 +226,10 @@
 
 *::-webkit-scrollbar-thumb:active {
     background: var(--color-scrollbar-thumb-active);
+}
+
+*::selection {
+    background-color: var(--text-selection-color);
 }
 body {
     box-sizing: border-box;
