--- a/css/article-1.css
+++ b/css/article-1.css
@@ -213,6 +213,12 @@
     --font-mono: Fira Code, monospace;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 *::-webkit-scrollbar-corner,
 *::-webkit-scrollbar-button {
     display: none;
@@ -231,6 +237,7 @@
 *::selection {
     background-color: var(--text-selection-color);
 }
+
 body {
     box-sizing: border-box;
     background-color: var(--background-color);
@@ -241,6 +248,7 @@ body {
 }
 body::-webkit-scrollbar {
     border-left: 1px solid var(--color-scrollbar-border);
+    width: 14px;
 }
 
 .container {
@@ -355,55 +363,30 @@ h3 {
     margin-bottom: 0;
 }
 
+.editor p {
+    padding-bottom: 1.5rem;
+}
+
 .article p {
-    margin-top: 0;
     line-height: 24px;
-    /* width: 450px; */
-    margin: 0;
     font-size: 16px;
+}
+
+.paragraph-padding {
+    padding-top: 1.5rem;
+}
+
+pre {
+    margin-bottom: 1.5rem;
 }
 
 header {
     margin-left: 30px;
 }
 
-/* Articles */
-.article {
-    display: flex;
-    margin: 0 10px 18px 0;
-}
-
-.article-div {
-    margin-top: -20px;
-}
-
-.article-div a {
-    text-decoration: none;
-    color: var(--body-text);
-}
-
-.article-div a:hover {
-    color: var(--accent-hover);
-}
-
-.article img {
-    margin: 0 20px;
-    height: 96px;
-}
-
-.article time {
-    font-size: 13px;
-    color: var(--secondary-text);
-    padding-top: 10px;
-}
-
-.time {
-    padding-bottom: 25px;
-}
-
 hr {
     border: none;
-    margin: 1.5rem 0 1.2rem;
+    margin: 1.5rem 0;
     overflow: hidden;
     white-space: nowrap;
     color: rgb(136, 132, 111);
@@ -474,6 +457,7 @@ footer ul a:hover {
     cursor: zoom-in;
     display: block;
     max-width: 100%;
+    margin-bottom: 1rem;
 }
 
 .time-nolines {
@@ -494,17 +478,9 @@ footer ul a:hover {
     color: var(--accent-hover);
 }
 
-.main-article p {
-    padding-bottom: 7px;
-}
-
 .main-article h2 {
-    padding: 17px 0 8px;
+    padding-top: 1.5rem;
     font-size: 22px;
-}
-
-.black-div {
-    padding: 30px 0;
 }
 
 blockquote {
@@ -527,12 +503,22 @@ pre {
     color: var(--code-color);
     margin-left: -65px;
     margin-right: -65px;
+    line-height: 1.5rem;
 }
 
 code {
     color: var(--code-color);
     font-size: 16px;
     font-family: var(--font-mono);
+}
+
+.list {
+    list-style-type: none;
+}
+
+.list::before {
+    content: "- ";
+    color: var(--accent);
 }
 
 .code-constant {
@@ -603,11 +589,23 @@ code {
 }
 
 .scroll-bar {
-    overflow-x: auto;
+    overflow: hidden;
+}
+
+/* .scroll-bar-1 {
+    height: 10.5rem;
+} */
+.scroll-bar-2 {
+    height: 7.5rem;
 }
 .scroll-bar::-webkit-scrollbar {
     display: none;
 }
+
+.scroll-bar-3 {
+    height: 9rem;
+}
+
 .text-1-content::before {
     content: "> > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > >";
     width: 1ch;
@@ -617,6 +615,7 @@ code {
 }
 
 .text-3-content p {
+    padding-bottom: 0;
     margin: 0;
     color: var(--color-blockquote);
 }
@@ -624,8 +623,6 @@ code {
 .text-1-content {
     display: flex;
     overflow: hidden;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
     color: var(--article3-gray-text);
 }
 
