--- a/css/article-5.css
+++ b/css/article-5.css
@@ -199,6 +199,7 @@ body {
 
 body::-webkit-scrollbar {
     border-left: 1px solid var(--color-scrollbar-border);
+    width: 14px;
 }
 
 .container {
