--- a/css/blog.css
+++ b/css/blog.css
@@ -179,6 +179,7 @@ body {
 }
 body::-webkit-scrollbar {
     border-left: 1px solid var(--color-scrollbar-border);
+    width: 14px;
 }
 
 .container {
