--- a/css/ghostmask.css
+++ b/css/ghostmask.css
@@ -185,6 +185,7 @@ body {
 }
 body::-webkit-scrollbar {
     border-left: 1px solid var(--color-scrollbar-border);
+    width: 14px;
 }
 .container {
     max-width: 81ch;
