--- a/css/oblik.css
+++ b/css/oblik.css
@@ -188,6 +188,7 @@ body {
 
 body::-webkit-scrollbar {
     border-left: 1px solid var(--color-scrollbar-border);
+    width: 14px;
 }
 
 .container {
