--- a/css/rundown.css
+++ b/css/rundown.css
@@ -186,6 +186,7 @@ body {
 }
 body::-webkit-scrollbar {
     border-left: 1px solid var(--color-scrollbar-border);
+    width: 14px;
 }
 
 .container {
