--- a/css/server.css
+++ b/css/server.css
@@ -205,6 +205,7 @@ body {
 
 body::-webkit-scrollbar {
     border-left: 1px solid var(--color-scrollbar-border);
+    width: 14px;
 }
 
 .container {
