--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* Global styling */
 :root,
 :root.monokai {
     --background-color: #1e1f1c;
@@ -157,8 +158,8 @@
 *::before,
 *::after {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
+    padding: 0;
 }
 
 *::-webkit-scrollbar-corner,
@@ -207,10 +208,11 @@ body::-webkit-scrollbar {
 }
 
 .container {
-    max-width: 81ch;
     margin: 4.5rem auto;
+    max-width: 81ch;
 }
 
+/* Header/Navbar */
 .nav-list {
     display: flex;
     margin: 0 auto;
@@ -229,9 +231,9 @@ body::-webkit-scrollbar {
 }
 
 .nav-link {
+    color: var(--navbar-text);
     font-family: var(--font-sans);
     font-size: 0.8rem;
-    color: var(--navbar-text);
 }
 
 .nav-link div {
@@ -239,6 +241,7 @@ body::-webkit-scrollbar {
     padding: 0.4rem 0 0.4rem 0.5rem;
 }
 
+/* Main */
 main {
     font-weight: 500;
 }
@@ -262,10 +265,10 @@ main {
 }
 
 .profile-pic {
+    object-fit: cover;
+    margin-right: 1rem;
     width: 17.5ch;
     height: 10.5rem;
-    margin-right: 1rem;
-    object-fit: cover;
 }
 
 .header-text h1 {
@@ -273,8 +276,8 @@ main {
 }
 
 .occupation {
-    color: var(--secondary-text);
     padding-bottom: 1.5rem;
+    color: var(--secondary-text);
 }
 
 .accent {
@@ -289,12 +292,12 @@ main {
 
 .line-break {
     display: flex;
-    height: 1.5rem;
-    margin: 1.5rem 0;
-    border-width: 0px;
-    color: var(--line-break);
     opacity: 80%;
     overflow: hidden !important;
+    margin: 1.5rem 0;
+    border-width: 0px;
+    height: 1.5rem;
+    color: var(--line-break);
 }
 
 .line-break::before {
@@ -304,8 +307,8 @@ main {
 
 .line-break::after {
     content: "-------------------------------------------------------";
-    font-variant-ligatures: none;
     overflow-wrap: anywhere;
+    font-variant-ligatures: none;
 }
 
 .section-header {
@@ -319,9 +322,9 @@ article {
 }
 
 .article-img {
+    margin-right: 1rem;
     width: 17.5ch;
     height: 6rem;
-    margin-right: 1rem;
 }
 
 .article-title a {
@@ -335,8 +338,8 @@ article {
 }
 
 .article-description {
-    min-height: 3rem;
     opacity: 90%;
+    min-height: 3rem;
 }
 
 .date-published {
@@ -351,9 +354,9 @@ article {
 }
 
 .arrow {
+    vertical-align: top;
     color: var(--accent);
     font-size: 2rem;
-    vertical-align: top;
 }
 
 .more-articles:hover,
@@ -362,9 +365,9 @@ article {
 }
 
 .project-img {
+    margin-right: 1rem;
     width: 10ch;
     height: 6rem;
-    margin-right: 1rem;
 }
 
 .project-link {
@@ -431,15 +434,15 @@ footer {
     position: absolute;
     top: 0;
     left: 0;
-    border: none;
-    background: none;
-    color: var(--body-text);
     opacity: 0;
     -webkit-appearance: none;
+    border: none;
+    background: none;
+    cursor: pointer;
+    color: var(--body-text);
     font-size: 1rem;
     font-weight: 500;
     font-family: "Fira code", monospace;
-    cursor: pointer;
 }
 
 .theme-picker:focus,
@@ -455,14 +458,14 @@ footer {
 .lines {
     position: absolute;
     top: 8.5rem;
-    text-align: right;
     padding: 0 1.5rem;
     color: var(--editor-line-number);
+    text-align: right;
 }
 
 .lines-1:hover {
-    color: var(--editor-line-number-hover);
     cursor: pointer;
+    color: var(--editor-line-number-hover);
 }
 
 .lines-1:active,
@@ -473,14 +476,6 @@ footer {
 @media (max-width: 599px) {
     body::-webkit-scrollbar {
         display: none;
-    }
-    .editor {
-        padding-left: 5ch;
-        padding-right: 2ch;
-    }
-    .editor-content {
-        max-width: 40ch;
-        line-height: 1.5rem;
     }
 
     .container {
@@ -498,6 +493,15 @@ footer {
 
     .nav-link div {
         min-width: 0;
+    }
+
+    .editor {
+        padding-left: 5ch;
+        padding-right: 2ch;
+    }
+    .editor-content {
+        max-width: 40ch;
+        line-height: 1.5rem;
     }
 
     .profile-pic {
@@ -533,10 +537,10 @@ footer {
     }
 
     .article-img {
+        object-fit: contain;
         width: 18.6rem;
         max-width: 100%;
         height: 10rem;
-        object-fit: contain;
         background-color: var(--background-color);
     }
 
@@ -545,8 +549,8 @@ footer {
     }
 
     .date-published {
-        font-size: 0.71rem;
         padding-bottom: 0.5rem;
+        font-size: 0.71rem;
     }
 
     .project-img {
@@ -587,8 +591,8 @@ footer {
     }
 
     footer {
-        min-height: 0;
         flex-direction: column;
+        min-height: 0;
     }
 
     .social-links {
@@ -604,8 +608,8 @@ footer {
     .lines {
         position: absolute;
         top: 4.3rem;
-        text-align: right;
         padding: 0 1.5rem;
         color: var(--editor-line-number);
+        text-align: right;
     }
 }
