--- a/css/server.css
+++ b/css/server.css
@@ -1,3 +1,4 @@
+/* Global styles */
 :root,
 :root.monokai {
     --background-color: #1e1f1c;
@@ -162,8 +163,8 @@
 *::before,
 *::after {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
+    padding: 0;
 }
 
 *::-webkit-scrollbar-corner,
@@ -209,10 +210,11 @@ body::-webkit-scrollbar {
 }
 
 .container {
-    max-width: 81ch;
     margin: 4.5rem auto;
+    max-width: 81ch;
 }
 
+/* Header/Navbar */
 .nav-list {
     display: flex;
     margin: 0 auto;
@@ -224,9 +226,9 @@ body::-webkit-scrollbar {
 }
 
 .nav-link {
+    color: var(--navbar-text);
     font-family: var(--font-sans);
     font-size: 0.8rem;
-    color: var(--navbar-text);
 }
 
 .nav-link div {
@@ -234,6 +236,7 @@ body::-webkit-scrollbar {
     padding: 0.3rem 0 0.3rem 0.5rem;
 }
 
+/* Main */
 .editor {
     min-height: 100vh;
     padding: 2rem 8ch 5rem;
@@ -267,8 +270,8 @@ table {
 
 input[type="text"] {
     display: inline;
-    width: 100%;
     border: none;
+    width: 100%;
     background-color: var(--editor-background);
     font-family: inherit;
     font-weight: inherit;
@@ -290,9 +293,9 @@ input[type="text"]:active {
 
 .table-break {
     position: relative;
+    overflow: hidden;
     height: 1.5rem;
     padding-right: 1ch;
-    overflow: hidden;
     color: var(--line-break);
 }
 
@@ -314,13 +317,13 @@ input[type="text"]:active {
 }
 
 .line-break {
-    display: flex;
-    height: 1.5rem;
-    margin: 0 0 1.5rem;
-    border-width: 0px;
-    color: var(--line-break);
     opacity: 80%;
     overflow: hidden !important;
+    display: flex;
+    margin: 0 0 1.5rem;
+    border-width: 0px;
+    height: 1.5rem;
+    color: var(--line-break);
 }
 
 .line-break::before {
@@ -330,10 +333,11 @@ input[type="text"]:active {
 
 .line-break::after {
     content: "-------------------------------------------------------";
-    font-variant-ligatures: none;
     overflow-wrap: anywhere;
+    font-variant-ligatures: none;
 }
 
+/* Footer */
 footer {
     display: flex;
     justify-content: space-between;
@@ -385,15 +389,15 @@ footer {
     position: absolute;
     top: 0;
     left: 0;
-    border: none;
-    background: none;
-    color: var(--body-text);
     opacity: 0;
     -webkit-appearance: none;
+    border: none;
+    background: none;
+    cursor: pointer;
+    color: var(--body-text);
     font-size: 1rem;
     font-weight: 500;
     font-family: "Fira code", monospace;
-    cursor: pointer;
 }
 
 .theme-picker:focus,
@@ -406,17 +410,18 @@ footer {
     color: var(--secondary-text);
 }
 
+/* Line numbers */
 .lines {
     position: absolute;
     top: 8.5rem;
-    text-align: right;
     padding: 0 1.5rem;
     color: var(--editor-line-number);
+    text-align: right;
 }
 
 .lines-1:hover {
-    color: var(--editor-line-number-hover);
     cursor: pointer;
+    color: var(--editor-line-number-hover);
 }
 
 .lines-1:active,
@@ -424,15 +429,10 @@ footer {
     color: var(--editor-line-number-hover);
 }
 
+/* Mobile view */
 @media (max-width: 599px) {
     body::-webkit-scrollbar {
         display: none;
-    }
-    .editor {
-        padding: 2rem 5ch 5rem;
-    }
-    .editor-content {
-        max-width: 40ch;
     }
 
     .container {
@@ -442,6 +442,7 @@ footer {
     nav {
         overflow: auto;
     }
+
     nav::-webkit-scrollbar {
         display: none;
     }
@@ -459,6 +460,13 @@ footer {
         min-width: 0;
     }
 
+    .editor {
+        padding: 2rem 5ch 5rem;
+    }
+    .editor-content {
+        max-width: 40ch;
+    }
+
     .title h1 {
         font-size: 1.09rem;
     }
@@ -473,8 +481,8 @@ footer {
     }
 
     footer {
-        min-height: 0;
         flex-direction: column;
+        min-height: 0;
     }
 
     .social-links {
@@ -490,8 +498,8 @@ footer {
     .lines {
         position: absolute;
         top: 4.1rem;
-        text-align: right;
         padding-left: 1rem;
         color: var(--editor-line-number);
+        text-align: right;
     }
 }
